fix: styles in high contrast mode

--- a/src/scss/components/_calendar.scss
+++ b/src/scss/components/_calendar.scss
@@ -92,8 +92,10 @@ $chromatic-colors: (
           .calendar-link {
             border-radius: 50%;
             margin: 0.25rem 0;
+            outline: 0.125rem solid transparent;
 
             &:hover {
+              outline: 0.25rem solid transparent;
               .active {
                 background-color: $calendar-link-color-hover-focus;
               }
@@ -133,6 +135,7 @@ $chromatic-colors: (
               min-width: 100%;
               height: 100%;
               margin: 0;
+              outline: 0.125rem solid transparent;
 
               cursor: pointer;
               &.bg-gray {
